[package]
name = "rsnano_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
jsonrpsee = { version = "0.23", features = ["server", "macros"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.40"
async-trait = "0"
rsnano_node = { path = "../node" }
warp = "0.3"
